Remove irrelevant code

--- a/package.json
+++ b/package.json
@@ -14,8 +14,5 @@
     "WebRTC"
   ],
   "author": "Henrik Joreteg <henrik@andyet.net>",
-  "license": "MIT",
-  "peerDependencies": {
-    "webrtc-adapter": "^6.0.0"
-  }
+  "license": "MIT"
 }
